fix(tabs): Increase contrast of tablist divider

--- a/src/tokens/_flexy-comp-tabs.scss
+++ b/src/tokens/_flexy-comp-tabs.scss
@@ -13,7 +13,7 @@ $_flexy-comp-tabs: (
   tab-selected-label-color: $flexy-sys-color-on-surface,
   tab-unselected-fill-color: transparent,
   tab-unselected-label-color: $flexy-sys-color-on-surface,
-  tablist-divider-color: $flexy-sys-palette-grey-10,
+  tablist-divider-color: $flexy-sys-palette-grey-20,
   tablist-divider-margin: calc(16px + 2px * $flexy-sys-ref-density),
   tablist-fill-color: transparent,
   tablist-height: calc(48px + 4px * $flexy-sys-ref-density),
